Added integrationtests